# Marcus_K_Thorsen_System_Integration

01._Introduction/: index.html
03._Modules/node_commonjs/: index.js  myModule.js
03._Modules/node_esmodules/: index.js  myModule.js
03._Modules/python_main/: library_importer.py  potential_library.py
03._Modules/python_modules/: main.py
04._Encode_Decode/: README.md
04._Encode_Decode/01._node/: index.js
05._Python_Virtual_Environments/01._venv/: README.md  main.py
05._Python_Virtual_Environments/02._pipenv/: README.md  main.py
05._Python_Virtual_Environments/03._poetry/: README.md  main.py  pyproject.toml
06._Simple_Servers/02._python/: README.md  pyproject.toml
07._TCP_UDP_bonus/: README.md
08._Server-Server/01._node/: README.md  app.js  package.json
08._Server-Server/02._python/: README.md  main.py  pyproject.toml
09._Environment_Variables/01._node/: README.md  index.js  package.json
09._Environment_Variables/02._python/: README.md  main.py  pyproject.toml
10._Date/01._node/: index.js
10._Date/02._python/: main.py
11._Short_Polling/01._node/: README.md  app.js  package.json
12._Long_Polling/01._node/: README.md  app.js
13._Server-sent_events/: README.md
13._Server-sent_events/01._node/: README.md  app.js  package.json
13._Server-sent_events/02._python/: README.md  main.py  pyproject.toml
13._Server-sent_events/02._python/templates/: index.html
14._WebSocket/01._node/: README.md  client.js  server.js
14._WebSocket/02._python_plain/: README.md  client.py  pyproject.toml  server.py
14._WebSocket/03._python_fastapi/: README.md  connection_manager.py  main.py  pyproject.toml
15._OpenAPI/01._node/: README.md  app.js
15._OpenAPI/02._python/: README.md  main.py  pyproject.toml
16._WebRTC/: README.md
17._Database_Migrations/: 01._migrations.md  02._backup_documentation.md  20250411124949_mro_migration.js  README.md  docker-compose.yaml  mydatabase.json  mydatabase_mro_docs.html
17._Database_Migrations/01._node_knex/: 01._migrations.md  README.md  index.js  knexfile.js  package-lock.json  package.json
17._Database_Migrations/02._python_alembic/: 01._migrations.md  README.md  alembic.ini  migrate_data.py  pyproject.toml
17._Database_Migrations/02._python_alembic/alembic/versions/: 54bccc73263a_create_account_table.py  ef37672e2f28_update_account_table_to_have_created_at_.py
17._Database_Migrations/initdb/: init.sql
18._CORS/: index.html
18._CORS/01._node/: README.md  app.js  myModules.js  package.json
18._CORS/02._python/: README.md  pyproject.toml
19._Mulitpart_Forms/: README.md  index.html
19._Mulitpart_Forms/01._node/: README.md  app.js  package-lock.json  package.json
19._Mulitpart_Forms/02._python/: README.md  main.py  pyproject.toml
20._Base64_Images/: README.md  index.html
21._Audio/: README.md
22._MPEG-DASH/: README.md  package-lock.json  package.json
23._Embedded_Youtube/: README.md  embeddedyoutube.html
25._GitHub_Webhooks/: README.md
25._GitHub_Webhooks/01._node/: README.md  package-lock.json  package.json
25._GitHub_Webhooks/02._python/: README.md  main.py  (+1 more)
27._Web_Scraping_Web_Crawling/: README.md
(+39 files in other folders)
